--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <div class="app">
-            <h1>Hack Club Quiz</h1>
+            <h1>Programming Quiz</h1>
             <div class="quiz">
+                <h3 id="question-counter"></h3>
                 <h2 id="question"></h2>
                 <div id="answer-buttons">
                     <button class="btn"></button>
@@ -20,4 +21,4 @@
         </div>
     </body>
     <script src="quiz.js"></script>
-    </html>
+</html>
